--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,29 @@
 <resources>
-    <string name="app_name">YouTubeApi</string>
+    <string name="app_name">YouTubeApiOnActivity</string>
+
+    <string name="playlist">playlist</string>
+    <string name="try_again">Try again</string>
+    <string name="make_a_life_changing">Make a Life Changing</string>
+
+    <string name="select_video_quality">Select video quality</string>
+    <string name="_240p">240p</string>
+
+
+    <string name="tv_playlisttitle">tv_playlistTitle</string>
+    <string name="playlisttitle">playlisttitle</string>
+    <string name="series">series</string>
+    <string name="title">title</string>
+    <string name="Playlist_video_series">video series</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="video_title_example">video_title_example</string>
+    <string name="title_example">title_example</string>
+    <string name="playlist_description_example">playlist_description_example</string>
+    <string name="playlist_video_series">playlist_video_series</string>
     <string name="todo">TODO</string>
-    <string name="playlist">Playlist</string>
-    <string name="nameplaylist">NamePlaylist</string>
-    <string name="elenco">elenco</string>
-    <string name="no_internet_connection">no internet connection</string>
+    <string name="back">Back</string>
+    <string name="playlistvid">Playlist</string>
+    <string name="playlist_toolbar">playlist_toolbar</string>
+    <string name="cancel">cancel</string>
+    <string name="download">download</string>
+    <string name="downloadVid">Download</string>
 </resources>
